--- a/varnish/map.jinja
+++ b/varnish/map.jinja
@@ -2,7 +2,9 @@
     'Debian': {
         'pkg': 'varnish',
         'service': 'varnish',
-        'config_file': '/etc/default/varnish',
-        'vcl_file': '/etc/varnish/default.vcl',
+        'config_files': {
+          'config': '/etc/default/varnish',
+          'vcl': '/etc/varnish/default.vcl',
+        }
     },
 }, merge=salt['pillar.get']('varnish:lookup'), default='Debian') %}
